# Attendance

./: AMS  Admin.cpp  Admin.h  CMakeLists.txt  Database_handler.cpp  Database_handler.h  Faculty.cpp  Faculty.h  Interface_handler.cpp  Interface_handler.h  Presentation.pptx  README.md  SRS.docx  Student.cpp  Student.h  StudentsList.txt  TEST.docx  User.cpp  User.h  a.out  attendance_management.cpp  attendance_management.h  faculty_details.txt  lectureDatesfile.txt  main.cpp  passwords.txt
code/: Database_handler.h  Faculty.cpp  Interface_handler.h  Student.cpp  User.h
data/: faculty_details.txt
data/date/: 3-1-2018.txt  5-1-2018.txt
database/: StudentsList.txt  faculty_details.txt
date/: 8-1-2018.txt
